source/GeneratedParsers/PyramidGrammarParser.ts
// Generated from PyramidGrammar.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import PyramidGrammarVisitor from "./PyramidGrammarVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class PyramidGrammarParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly WS = 20;
	public static readonly LINE_COMMENT = 21;
	public static readonly BLOCK_COMMENT = 22;
	public static readonly STRING_LITERAL = 23;
	public static readonly SYMBOL_ID = 24;
	public static readonly INT_LITERAL = 25;
	public static readonly REGEX_LITERAL = 26;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_script = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_appStatement = 2;
	public static readonly RULE_appPropList = 3;
	public static readonly RULE_appProp = 4;
	public static readonly RULE_expr = 5;
	public static readonly RULE_taskStatement = 6;
	public static readonly RULE_taskPropList = 7;
	public static readonly RULE_taskProp = 8;
	public static readonly RULE_condClause = 9;
	public static readonly RULE_condExpr = 10;
	public static readonly RULE_simpleCondExpr = 11;
	public static readonly RULE_environmentStatement = 12;
	public static readonly RULE_environmentPropList = 13;
	public static readonly RULE_environmentProp = 14;
	public static readonly RULE_resourceStatement = 15;
	public static readonly RULE_resourcePropList = 16;
	public static readonly RULE_resourceProp = 17;
	public static readonly RULE_solutionStatement = 18;
	public static readonly RULE_solutionPropList = 19;
	public static readonly RULE_solutionProp = 20;
	public static readonly RULE_printStatement = 21;
	public static readonly literalNames: (string | null)[] = [ null, "'app'", 
                                                            "'{'", "'}'", 
                                                            "'task'", "'solution'", 
                                                            "'resource'", 
                                                            "':'", "';'", 
                                                            "'('", "')'", 
                                                            "'and'", "'or'", 
                                                            "'environment'", 
                                                            "'='", "'!='", 
                                                            "'=='", "'print'", 
                                                            "'symbols'", 
                                                            "'symbol'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "WS", "LINE_COMMENT", 
                                                             "BLOCK_COMMENT", 
                                                             "STRING_LITERAL", 
                                                             "SYMBOL_ID", 
                                                             "INT_LITERAL", 
                                                             "REGEX_LITERAL" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"script", "statement", "appStatement", "appPropList", "appProp", "expr", 
		"taskStatement", "taskPropList", "taskProp", "condClause", "condExpr", 
		"simpleCondExpr", "environmentStatement", "environmentPropList", "environmentProp", 
		"resourceStatement", "resourcePropList", "resourceProp", "solutionStatement", 
		"solutionPropList", "solutionProp", "printStatement",
	];
	public get grammarFileName(): string { return "PyramidGrammar.g4"; }
	public get literalNames(): (string | null)[] { return PyramidGrammarParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return PyramidGrammarParser.symbolicNames; }
	public get ruleNames(): string[] { return PyramidGrammarParser.ruleNames; }
	public get serializedATN(): number[] { return PyramidGrammarParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, PyramidGrammarParser._ATN, PyramidGrammarParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public script(): ScriptContext {
		let localctx: ScriptContext = new ScriptContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, PyramidGrammarParser.RULE_script);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 45;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 44;
				this.statement();
				}
				}
				this.state = 47;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 139378) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, PyramidGrammarParser.RULE_statement);
		try {
			this.state = 55;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 49;
				this.appStatement();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 50;
				this.taskStatement();
				}
				break;
			case 13:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 51;
				this.environmentStatement();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 52;
				this.resourceStatement();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 53;
				this.solutionStatement();
				}
				break;
			case 17:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 54;
				this.printStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public appStatement(): AppStatementContext {
		let localctx: AppStatementContext = new AppStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, PyramidGrammarParser.RULE_appStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 57;
			this.match(PyramidGrammarParser.T__0);
			this.state = 58;
			this.match(PyramidGrammarParser.SYMBOL_ID);
			this.state = 59;
			this.match(PyramidGrammarParser.T__1);
			this.state = 61;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 16777328) !== 0)) {
				{
				this.state = 60;
				this.appPropList();
				}
			}

			this.state = 63;
			this.match(PyramidGrammarParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public appPropList(): AppPropListContext {
		let localctx: AppPropListContext = new AppPropListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, PyramidGrammarParser.RULE_appPropList);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 66;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 65;
				this.appProp();
				}
				}
				this.state = 68;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 16777328) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public appProp(): AppPropContext {
		let localctx: AppPropContext = new AppPropContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, PyramidGrammarParser.RULE_appProp);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 70;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 16777328) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 71;
			this.match(PyramidGrammarParser.T__6);
			this.state = 72;
			this.expr();
			this.state = 73;
			this.match(PyramidGrammarParser.T__7);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let localctx: ExprContext = new ExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, PyramidGrammarParser.RULE_expr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 75;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 58720256) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public taskStatement(): TaskStatementContext {
		let localctx: TaskStatementContext = new TaskStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, PyramidGrammarParser.RULE_taskStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 77;
			this.match(PyramidGrammarParser.T__3);
			this.state = 78;
			this.match(PyramidGrammarParser.SYMBOL_ID);
			this.state = 79;
			this.match(PyramidGrammarParser.T__1);
			this.state = 81;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===4 || _la===24) {
				{
				this.state = 80;
				this.taskPropList();
				}
			}

			this.state = 83;
			this.match(PyramidGrammarParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public taskPropList(): TaskPropListContext {
		let localctx: TaskPropListContext = new TaskPropListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, PyramidGrammarParser.RULE_taskPropList);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 86;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 85;
				this.taskProp();
				}
				}
				this.state = 88;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===4 || _la===24);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public taskProp(): TaskPropContext {
		let localctx: TaskPropContext = new TaskPropContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, PyramidGrammarParser.RULE_taskProp);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 90;
			_la = this._input.LA(1);
			if(!(_la===4 || _la===24)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 91;
			this.match(PyramidGrammarParser.T__6);
			this.state = 92;
			this.expr();
			this.state = 94;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===9) {
				{
				this.state = 93;
				this.condClause();
				}
			}

			this.state = 96;
			this.match(PyramidGrammarParser.T__7);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public condClause(): CondClauseContext {
		let localctx: CondClauseContext = new CondClauseContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, PyramidGrammarParser.RULE_condClause);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 98;
			this.match(PyramidGrammarParser.T__8);
			this.state = 99;
			this.condExpr();
			this.state = 100;
			this.match(PyramidGrammarParser.T__9);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public condExpr(): CondExprContext {
		let localctx: CondExprContext = new CondExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, PyramidGrammarParser.RULE_condExpr);
		let _la: number;
		try {
			this.state = 112;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 102;
				this.simpleCondExpr();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 103;
				this.simpleCondExpr();
				this.state = 106;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===11 || _la===12) {
					{
					this.state = 104;
					_la = this._input.LA(1);
					if(!(_la===11 || _la===12)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					this.state = 105;
					this.condExpr();
					}
				}

				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 108;
				this.match(PyramidGrammarParser.T__8);
				this.state = 109;
				this.condExpr();
				this.state = 110;
				this.match(PyramidGrammarParser.T__9);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public simpleCondExpr(): SimpleCondExprContext {
		let localctx: SimpleCondExprContext = new SimpleCondExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, PyramidGrammarParser.RULE_simpleCondExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 114;
			_la = this._input.LA(1);
			if(!(_la===13 || _la===24)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 115;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 114688) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 116;
			this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public environmentStatement(): EnvironmentStatementContext {
		let localctx: EnvironmentStatementContext = new EnvironmentStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, PyramidGrammarParser.RULE_environmentStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 118;
			this.match(PyramidGrammarParser.T__12);
			this.state = 119;
			this.match(PyramidGrammarParser.SYMBOL_ID);
			this.state = 120;
			this.match(PyramidGrammarParser.T__1);
			this.state = 122;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===5 || _la===24) {
				{
				this.state = 121;
				this.environmentPropList();
				}
			}

			this.state = 124;
			this.match(PyramidGrammarParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public environmentPropList(): EnvironmentPropListContext {
		let localctx: EnvironmentPropListContext = new EnvironmentPropListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, PyramidGrammarParser.RULE_environmentPropList);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 127;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 126;
				this.environmentProp();
				}
				}
				this.state = 129;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===5 || _la===24);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public environmentProp(): EnvironmentPropContext {
		let localctx: EnvironmentPropContext = new EnvironmentPropContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, PyramidGrammarParser.RULE_environmentProp);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 131;
			_la = this._input.LA(1);
			if(!(_la===5 || _la===24)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 132;
			this.match(PyramidGrammarParser.T__6);
			this.state = 133;
			this.expr();
			this.state = 134;
			this.match(PyramidGrammarParser.T__7);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public resourceStatement(): ResourceStatementContext {
		let localctx: ResourceStatementContext = new ResourceStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, PyramidGrammarParser.RULE_resourceStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 136;
			this.match(PyramidGrammarParser.T__5);
			this.state = 137;
			this.match(PyramidGrammarParser.SYMBOL_ID);
			this.state = 138;
			this.match(PyramidGrammarParser.T__1);
			this.state = 140;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===24) {
				{
				this.state = 139;
				this.resourcePropList();
				}
			}

			this.state = 142;
			this.match(PyramidGrammarParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public resourcePropList(): ResourcePropListContext {
		let localctx: ResourcePropListContext = new ResourcePropListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, PyramidGrammarParser.RULE_resourcePropList);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 145;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 144;
				this.resourceProp();
				}
				}
				this.state = 147;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===24);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public resourceProp(): ResourcePropContext {
		let localctx: ResourcePropContext = new ResourcePropContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, PyramidGrammarParser.RULE_resourceProp);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 149;
			this.match(PyramidGrammarParser.SYMBOL_ID);
			this.state = 150;
			this.match(PyramidGrammarParser.T__6);
			this.state = 151;
			this.expr();
			this.state = 153;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===9) {
				{
				this.state = 152;
				this.condClause();
				}
			}

			this.state = 155;
			this.match(PyramidGrammarParser.T__7);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public solutionStatement(): SolutionStatementContext {
		let localctx: SolutionStatementContext = new SolutionStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, PyramidGrammarParser.RULE_solutionStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 157;
			this.match(PyramidGrammarParser.T__4);
			this.state = 158;
			this.match(PyramidGrammarParser.SYMBOL_ID);
			this.state = 159;
			this.match(PyramidGrammarParser.T__1);
			this.state = 161;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===24) {
				{
				this.state = 160;
				this.solutionPropList();
				}
			}

			this.state = 163;
			this.match(PyramidGrammarParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public solutionPropList(): SolutionPropListContext {
		let localctx: SolutionPropListContext = new SolutionPropListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, PyramidGrammarParser.RULE_solutionPropList);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 166;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 165;
				this.solutionProp();
				}
				}
				this.state = 168;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===24);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public solutionProp(): SolutionPropContext {
		let localctx: SolutionPropContext = new SolutionPropContext(this, this._ctx, this.state);
		this.enterRule(localctx, 40, PyramidGrammarParser.RULE_solutionProp);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 170;
			this.match(PyramidGrammarParser.SYMBOL_ID);
			this.state = 171;
			this.match(PyramidGrammarParser.T__6);
			this.state = 172;
			this.expr();
			this.state = 173;
			this.match(PyramidGrammarParser.T__7);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public printStatement(): PrintStatementContext {
		let localctx: PrintStatementContext = new PrintStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 42, PyramidGrammarParser.RULE_printStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 175;
			this.match(PyramidGrammarParser.T__16);
			this.state = 179;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 18:
				{
				this.state = 176;
				this.match(PyramidGrammarParser.T__17);
				}
				break;
			case 19:
				{
				this.state = 177;
				this.match(PyramidGrammarParser.T__18);
				this.state = 178;
				this.match(PyramidGrammarParser.SYMBOL_ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 181;
			this.match(PyramidGrammarParser.T__7);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!PyramidGrammarParser.__ATN) {
			PyramidGrammarParser.__ATN = new ATNDeserializer().deserialize(PyramidGrammarParser._serializedATN);
		}

		return PyramidGrammarParser.__ATN;
	}


	static DecisionsToDFA = PyramidGrammarParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class ScriptContext extends ParserRuleContext {
	constructor(parser?: PyramidGrammarParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public statement_list(): StatementContext[] {
		return this.getTypedRuleContexts(StatementContext) as StatementContext[];
	}
	public statement(i: number): StatementContext {
		return this.getTypedRuleContext(StatementContext, i) as StatementContext;
	}
    public get ruleIndex(): number {
    	return PyramidGrammarParser.RULE_script;
	}
	// @Override
	public accept<Result>(visitor: PyramidGrammarVisitor<Result>): Result {
		if (visitor.visitScript) {
			return visitor.visitScript(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class StatementContext extends ParserRuleContext {
	constructor(parser?: PyramidGrammarParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public appStatement(): AppStatementContext {
		return this.getTypedRuleContext(AppStatementContext, 0) as AppStatementContext;
	}
	public taskStatement(): TaskStatementContext {
		return this.getTypedRuleContext(TaskStatementContext, 0) as TaskStatementContext;
	}
	public environmentStatement(): EnvironmentStatementContext {
		return this.getTypedRuleContext(EnvironmentStatementContext, 0) as EnvironmentStatementContext;
	}
	public resourceStatement(): ResourceStatementContext {
		return this.getTypedRuleContext(ResourceStatementContext, 0) as ResourceStatementContext;
	}
	public solutionStatement(): SolutionStatementContext {
		return this.getTypedRuleContext(SolutionStatementContext, 0) as SolutionStatementContext;
	}
	public printStatement(): PrintStatementContext {
		return this.getTypedRuleContext(PrintStatementContext, 0) as PrintStatementContext;
	}
    public get ruleIndex(): number {
    	return PyramidGrammarParser.RULE_statement;
	}
	// @Override
	public accept<Result>(visitor: PyramidGrammarVisitor<Result>): Result {
		if (visitor.visitStatement) {
			return visitor.visitStatement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class AppStatementContext extends ParserRuleContext {
	constructor(parser?: PyramidGrammarParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public SYMBOL_ID(): TerminalNode {
		return this.getToken(PyramidGrammarParser.SYMBOL_ID, 0);
	}
	public appPropList(): AppPropListContext {
		return this.getTypedRuleContext(AppPropListContext, 0) as AppPropListContext;
	}
    public get ruleIndex(): number {
    	return PyramidGrammarParser.RULE_appStatement;
	}
	// @Override
	public accept<Result>(visitor: PyramidGrammarVisitor<Result>): Result {
		if (visitor.visitAppStatement) {
			return visitor.visitAppStatement(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

